<resources>
    <string name="app_name">汇健身</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <!-- Http协议请求状态码返回对应的JSON数据 -->
    <string name="HTTP_STATUSCODE_400_JSON">400表示调用发生错误。返回的Http消息中会包含详细的错误提示。</string>
    <string name="HTTP_STATUSCODE_401_JSON">请先登录，谢谢。</string>
    <string name="HTTP_STATUSCODE_500_JSON">服务器异常，请联系客服人员。</string>
    <string name="HTTP_STATUSCODE_2000_JSON">您不是激活用户，请先激活，谢谢。</string>
    <string name="HTTP_STATUSCODE_2001_JSON">登录成功，您访问此功能的权限不足，谢谢。</string>
    <string name="HTTP_STATUSCODE_2002_JSON">您的APP没通过验证，请先验证或者更新最新版本，谢谢。</string>
    <string name="HTTP_NoNetwork">无网络连接，请打开手机的网络。</string>
    <string name="network_error">对不起，网络访问出错！</string>
    <string name="check_params_error">输入为空或格式不正确</string>
    <string name="load">loading...</string>
    <!-- 网络请求返回配置 -->
    <string name="HttpResult">result</string>
    <string name="HttpResult_msg">msg</string>
    <string name="HttpResult_OK">0</string>
    <string name="HttpResult_NO">-1</string>
    <string name="load_error">加载异常，请重试</string>
    <string name="login_user">个人</string>
    <string name="login_coach">教练</string>
    <string name="login_otherway">其他账户登录</string>
    <string name="login_forgetPwd">忘记密码</string>
    <string name="login_register">快速注册</string>
    <string name="register_submit">加入</string>
    <string name="register">注册</string>
    <string name="back">返回</string>
    <string name="cancel">取消</string>
    <string name="home">首页</string>
    <string name="defaultArea">上海市</string>
    <string name="editInfo">编辑信息</string>
    <string name="pointsDetail">积分详情</string>
    <string name="login_error">对不起登陆异常</string>
    <string name="submit">提交</string>
    <string name="addCourse">添加里程</string>
    <string name="text_Cancel">取消</string>
    <string name="text_takingPictures">拍照</string>
    <string name="text_selectPphotoAlbum">从相册中选取</string>
    <string name="params_error">对不起，请检查数据是否正确</string>
    <string name="submit_error">对不起，提交异常</string>
    <string name="submit_ok">提交完成</string>
    <string name="chargeInfo">请输入评论内容</string>
    <string name="charge">评论</string>
    <string name="publishLesson">发布课程</string>
    <string name="coachInfo">教练资料</string>
    <string name="add_publishLesson">添加</string>
    <string name="city_search">选择城市</string>
    <string name="box">球类</string>
    <string name="fight">格斗</string>
    <string name="submit_order">提交订单</string>
    <string name="comment">评论</string>
    <string name="weibosdk_demo_toast_auth_failed">授权登陆失败</string>
    <string name="weibosdk_demo_toast_auth_canceled">授权登陆取消</string>
    <string name="cancel_weixin">发送取消</string>
    <string name="refuse_weixin">发送拒绝</string>
    <string name="return_weixin">发送返回</string>
    <string name="login_guide">游客访问</string>
    <string name="no_login">您当前是游客模式，不能查看相应内容</string>
    <string name="coach">教练</string>
    <string name="lesson">课程</string>
    <string name="collect">我的收藏</string>
    <string name="err_three">最多只能选择三项</string>

    <string-array name="tab_names">
        <item>全部</item>
        <item>待付款</item>
        <item>已退款</item>
        <item>待评价</item>
    </string-array>
    <string-array name="items_nearby">
        <item>智能排序</item>
        <item>离我最近</item>
        <item>人气最高</item>
        <item>评价最好</item>
        <item>价格最低</item>
    </string-array>
    <string-array name="items_space">
        <item>智能排序</item>

        <item>人气最高</item>
        <item>评价最好</item>

    </string-array>
    <string-array name="items_cat">
        <item>全部类别</item>
        <item>瑜伽</item>
        <item>舞蹈</item>
        <item>动感单车</item>
        <item>自由器械</item>
        <item>增肌</item>
    </string-array>
</resources>
