<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/transparent"
    android:gravity="bottom"
    android:orientation="vertical"
    android:padding="5dip" >

    <Button
        android:id="@+id/takingPictures"
        style="@style/operatPopMenu"
        android:background="@drawable/operation_reservation_selector"
        android:text="@string/text_takingPictures" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="1dip"
        android:background="#DAD9DB" />

    <Button
        android:id="@+id/selectPphotoAlbum"
        style="@style/operatPopMenu"
        android:background="@drawable/operation_speech_selector"
        android:text="@string/text_selectPphotoAlbum" />

    <Button
        android:id="@+id/btnClose"
        style="@style/operatPopMenu"
        android:layout_marginTop="5dip"
        android:background="@drawable/operation_cancel_selector"
        android:textColor="@color/Orange"
        android:text="@string/text_Cancel" />

</LinearLayout>