<android.support.v7.widget.Toolbar xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/toolbar"
    android:layout_width="match_parent"
    android:layout_height="@dimen/height_70"
    android:background="@drawable/line"
    android:minHeight="?attr/actionBarSize"
    android:theme="@style/ThemeOverlay.AppCompat.ActionBar">
    <TextView
        android:id="@+id/back_tb"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:gravity="left|center_vertical"
        android:layout_centerInParent="true"
        android:textColor="@color/bg_page"
        android:textSize="@dimen/text_16"
        android:layout_marginTop="@dimen/margin_20"
        android:text="@string/cancel"/>
    <TextView
        android:id="@+id/area_tb"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:gravity="left|center_vertical"
        android:layout_centerInParent="true"
        android:textColor="@color/bg_page"
        android:textSize="@dimen/text_16"
        android:layout_marginTop="@dimen/margin_20"
        android:visibility="gone"
        android:text="@string/defaultArea"/>
    <TextView
        android:layout_marginTop="@dimen/margin_20"
        android:id="@+id/title_tb"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:layout_centerInParent="true"
        android:textColor="@color/bg_page"
        android:textSize="@dimen/text_20"
        android:text="@string/register"
        />


</android.support.v7.widget.Toolbar>
